--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Dry Oar Rafting</h1>
+    <h1>Dry Oar White Water Rafting</h1>
     <h2>Sydney Ahlstrom</h2>
     <h2>WDD 130-C8</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
