--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -29,6 +31,9 @@
             </div>
         </section>
     </div>
+
+
+
     <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
@@ -45,6 +50,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -68,5 +74,6 @@
             </a>
         </div>
     </footer>
+</div>
 </body>
 </html>
