site plan update

--- a/photography/site-plan.html
+++ b/photography/site-plan.html
@@ -23,14 +23,14 @@
       <p>The purpose of this site is to showcase and promote my photography skills so that I could potentially be hired by possible employers.</p>  <!-- change this -->
 
 
-      <h3>Audience</h3>
+      <h3>Audience and Site Details</h3>
       <p>My audience for this site would be any potential employers for my photography skills. This would include but not be limited to; magazines and television channels such as Discovery and National Geographic, as well as people wanting to hire me as a freelance photographer.</p/>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="personal website/photos/Sydney Ahlstrom Photography-logos.jpeg" alt="Logo image">
+      <img src="photography/photos/rsz_sydney_ahlstrom_photography-logos.jpg" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -86,9 +86,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Home: My Story</a>
+        <a href="#">Photo Album</a>
+        <a href="#">The Shot</a>
       </nav>
       <hr>
       <h2>
@@ -96,13 +96,13 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          Home: My Story
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Photo Album <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          The Shot  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +124,46 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+Why People Will Visit My Site
+People will visit my photography portfolio website to explore the captivating world of nature and wildlife through my lens. The allure lies in the promise of a visual journey, a testament to my passion and skill as a photographer specializing in the wild. Whether it's potential employers from renowned nature and wildlife magazines or enthusiasts seeking inspiration, the site aims to be a curated showcase of my best work, providing a window into the beauty of the natural world.
+Expected Visitor Questions
+As visitors land on my site, they'll likely have questions buzzing in their minds. They'll want to know about the person behind the lens, what drove me to pursue wildlife and nature photography, and who my inspirations are. The "My Story" section is intended to answer these questions, offering insights into my journey, influences from acclaimed photographers like Bertie Gregory and Keith Ladzinski, and the evolution of my passion for capturing the untamed beauty of nature.
+Desired Activities on the Site
+Visitors are expected to engage in various activities on the site, each designed to offer a unique experience. The "Photo Album" section is the visual centerpiece, inviting them to immerse themselves in a collection of my best shots. Here, they can explore the diversity of subjects and the artistic nuances of each photograph. The goal is to provide a comprehensive visual feast, allowing users to appreciate the range and depth of my photography skills.
+Necessary Information for Site Actions 
+To complete actions on the site, certain information is crucial. The "My Story" page needs to include details about my background, the pivotal moments that sparked my interest in photography, and the learning experiences that shaped my journey. The "Photo Album" should feature high-resolution images, each accompanied by concise yet descriptive captions that convey the essence of the shot. For "The Shot" section, users would need detailed narratives explaining the stories behind my two favorite photographs. These stories should offer a glimpse into the challenges faced, the emotions captured, and the serendipitous moments that led to these unforgettable shots.
+Why Visitors Will Choose My Site 
+In a sea of photography portfolios, the question arises – why choose mine? The answer lies in authenticity and storytelling. Visitors will come to my site for more than just visually appealing photographs. The stories woven into each image, the transparent narrative of my journey, and the influences of renowned photographers will set my portfolio apart. The site is not just a display of images; it's an invitation to connect with the photographer, to understand the passion and dedication that drive the lens capturing the wonders of nature.
+My Story Page
+The "My Story" page will serve as a narrative journey, tracing my steps from the first moment I held a camera to the present day. It will detail the inspirations drawn from iconic photographers, the challenges faced, and the pivotal moments that fueled my passion for wildlife and nature photography. By sharing my story, I aim to create a personal connection with visitors, allowing them to understand the person behind the lens.
+In summary, my photography portfolio website will be a multifaceted experience, offering a blend of visual appeal, personal narrative, and storytelling. Whether visitors are potential employers or photography enthusiasts, the site aims to provide a comprehensive and engaging exploration of my skills, inspirations, and the captivating world of nature and wildlife photography.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="photography/photos/rsz_img_3755.jpg" alt="flower">
+        <img src="photography/photos/rsz_img_0507_1.jpg" alt="mountains">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Photo Album</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Photo Album
+The "Photo Album" section will be a visual extravaganza, featuring a carefully curated compilation of my best shots. Each image will be a standalone piece of art, capturing the essence of the subjects in the most striking and evocative manner. With high-resolution images and concise captions, this section aims to showcase the diversity of my portfolio, catering to the visual appetite of visitors.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="photography/photos/rsz_img_0727_1.jpg" alt="eclipse">
+        <img src="photography/photos/rsz_img_3742.jpg" alt="plant">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>The Shot</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The Shot
+"The Shot" webpage will dive into the stories behind two of my favorite photographs. These narratives will provide a behind-the-scenes look, unraveling the challenges, emotions, and unique circumstances that led to the creation of these memorable shots. This section is intended to offer a more intimate and detailed understanding of my photography process, allowing visitors to connect with the stories behind the lens.
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="photography/photos/rsz_img_4745.jpg" alt="limpy the coyote">
+        <img src="photography/photos/rsz_img_2987.jpg" alt="orcas">
 
       </ul>
       <hr>
@@ -156,19 +173,19 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>Home: My Story</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Photo Album</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>The Shot</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
