--- a/photography/site-plan.html
+++ b/photography/site-plan.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
@@ -30,7 +29,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="photography/photos/rsz_sydney_ahlstrom_photography-logos.jpg" alt="Logo image">
+      <img src="photos/rsz_sydney_ahlstrom_photography-logos.jpg" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -44,7 +43,7 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/14453d-57a773-e4dfda-7a89c2-1b065e"</a>
+      Palette URL: <a href="https://coolors.co/14453d-57a773-d3d3d3-7a89c2-1b065e"</a>
 
 
       <table class="colors">
@@ -140,8 +139,8 @@ In summary, my photography portfolio website will be a multifaceted experience, 
 
       </p>
       <p>Images for the Home page</p>
-        <img src="photography/photos/rsz_img_3755.jpg" alt="flower">
-        <img src="photography/photos/rsz_img_0507_1.jpg" alt="mountains">
+        <img src="photos/rsz_img_3755.jpg" alt="flower">
+        <img src="photos/rsz_img_0507_1.jpg" alt="mountains">
 
       </ul>
       <h3>Photo Album</h3>
@@ -151,8 +150,8 @@ The "Photo Album" section will be a visual extravaganza, featuring a carefully c
 
       </p>
       <p>Images for the Page 2</p>
-        <img src="photography/photos/rsz_img_0727_1.jpg" alt="eclipse">
-        <img src="photography/photos/rsz_img_3742.jpg" alt="plant">
+        <img src="photos/rsz_img_0727_1.jpg" alt="eclipse">
+        <img src="photos/rsz_img_3742.jpg" alt="plant">
 
       </ul>
       <h3>The Shot</h3>
@@ -162,8 +161,8 @@ The "Photo Album" section will be a visual extravaganza, featuring a carefully c
 
       </p>
       <p>Images for the Page 3</p>
-        <img src="photography/photos/rsz_img_4745.jpg" alt="limpy the coyote">
-        <img src="photography/photos/rsz_img_2987.jpg" alt="orcas">
+        <img src="photos/rsz_img_4745.jpg" alt="limpy the coyote">
+        <img src="photos/rsz_img_2987.jpg" alt="orcas">
 
       </ul>
       <hr>
@@ -192,5 +191,4 @@ The "Photo Album" section will be a visual extravaganza, featuring a carefully c
       <img src="#" alt="page 3 wireframe">
     </main>
   </body>
-
 </html>
