--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -95,17 +95,14 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Blog</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
-        <!-- this page will have a name later -->
-      </div>
+      <div class="sm-page2">Blog</div>
       <div class="sm-page3">Contact Us</div>
 
       <div class="top">&nbsp;</div>
@@ -120,7 +117,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Blog</h3>
+
+    <img src="images/Screenshot 2023-11-15 183623.png" alt="blog wireframe">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
