--- a/photography/site-plan.html
+++ b/photography/site-plan.html
@@ -176,19 +176,19 @@ The "Photo Album" section will be a visual extravaganza, featuring a carefully c
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="photos/mystory-wireframe.jpg" alt="my story wireframe">
 
       <h3>Photo Album</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="photos/photoalbum-wireframe.jpg" alt="photo album wireframe">
 
       <h3>The Shot</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="photos/theshot-wireframe.jpg" alt="the shot wireframe">
     </main>
   </body>
 </html>
