--- a/photography/siteplan.html
+++ b/photography/siteplan.html
@@ -29,7 +29,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="photos/rsz_sydney_ahlstrom_photography-logos.jpg" alt="Logo image">
+      <img src="photos/logo.jpg" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -139,8 +139,8 @@ In summary, my photography portfolio website will be a multifaceted experience, 
 
       </p>
       <p>Images for the Home page</p>
-        <img src="photos/rsz_img_3755.jpg" alt="flower">
-        <img src="photos/rsz_img_0507_1.jpg" alt="mountains">
+        <img src="photos/seattle.jpg" alt="seattle">
+        <img src="photos/mountains.jpg" alt="mountains">
 
       </ul>
       <h3>Photo Album</h3>
@@ -150,8 +150,9 @@ The "Photo Album" section will be a visual extravaganza, featuring a carefully c
 
       </p>
       <p>Images for the Page 2</p>
-        <img src="photos/rsz_img_0727_1.jpg" alt="eclipse">
-        <img src="photos/rsz_img_3742.jpg" alt="plant">
+        <img src="photos/eclipse.jpg" alt="eclipse">
+        <img src="photos/plant.jpg" alt="plant">
+        <img src="photos/flower.jpg" alt="flower">
 
       </ul>
       <h3>The Shot</h3>
@@ -161,8 +162,8 @@ The "Photo Album" section will be a visual extravaganza, featuring a carefully c
 
       </p>
       <p>Images for the Page 3</p>
-        <img src="photos/rsz_img_4745.jpg" alt="limpy the coyote">
-        <img src="photos/rsz_img_2987.jpg" alt="orcas">
+        <img src="photos/limpy.jpg" alt="limpy the coyote">
+        <img src="photos/orcas.jpg" alt="orcas">
 
       </ul>
       <hr>
