--- a/photography/theshot.html
+++ b/photography/theshot.html
@@ -23,38 +23,18 @@
 
 
 
-    <main class="home-grid">
-        <section class="journey-card">
-            <h2>My Photography Journey</h2>
-            <p>When I was growing up, I was always fascinated with nature documentries and series on tv like Life, Blue Planet, and Planet Earth. I knew very early on that I wanted to be able to travel to those remote destinations someday and see the animals I loved so much in person. My mom seemed to pick up on this, and bought me my first camera when I was 14. It was a Canon Rebel T5, and is still the camera I use to this day. My mom is one of my biggest cheeleaders for my photography, and has continually encouraged me to try new things and keep working on my skills despite having frustrating experiences and lack of training. I ended up mostly training myself, and it's been a long journey, but it's also been rewarding to see my skills manifest into me becoming the photographer I am today.</p>
+    <main class="theshot-grid">
+        <section class="limpy-card">
+            <h2>Limpy the Coyote</h2>
+            <p>This is one of my most recent and most special shots. I have a huge love for Yellowstone National Park, so this summer I made an effort to go there as much as I could between work and school. On multiple visits I was able to photograph and spend some time around a peculiar coyote that me and some other regular photographers affectionately nicknamed "Limpy." The coyote had a bum back right leg, but she didn't let that stop her from showing off her impressive mouse hunting skills on multiple occassions. This particular photo is from my first ever encounter with Limpy, my roommate and I had been driving through the park looking for wildlife since 3am that morning and happened to stumble across Limpy just as we turned to head home. I was so excited that I got out of the car to sit on the roof. She came within twenty feet of our car, paying no attention to us whatsoever, and we got to take some really awesome pictures of her howling in the sagebrush. I'll always tresure this memory, and I hope to photograph her next summer as well.</p>
         </section>
-        <section class="inspiration-card">
-            <h2>My Inspiration</h2>
-            <p>Throughout my photography career, two specific people outside of my family have been huge influences and inspirations to me. Bertie Gregory is the cutest blonde British guy, and has risen through the ranks of photographers for National Geographic in recent years, earning quite a few shows of his own. The first time I ever saw one of his pictures, it was one he had captured of a costal sea wolf in the Pacific Northwest. From that moment on I decided that I wanted to be able to capture images similar to his, and be able to meet and work with him someday. Another one of my great inspirations comes from Keith Ladzinski, another prominent National Geographic photographer. Looking at some of his photos of polar bears and leopards and arctic landscapes and everything in between is truly eye opening to the beauties of the world that can be captured through a lense. I would love to be able to meet Keith or Bertie and just thank them for the joy they have brought to me and others through their photographs, and I hope to someday be able to bring that same joy to others through mine.</p>
+        <img class="limpy" src="photos/limpy.jpg" alt="limpy"
+        <section class="orca-card">
+            <h2>The Residents</h2>
+            <p>Believe it or not, this photo is one of the oldest pictures I have, it was one of the first pictures I ever took with my camera. I got the opportunity to go on a whale watching tour in the Pacific Northwest, north of Seattle. We ended up seeing a pod of the resident orcas there and spending over four hours surrounded by them as they socialized, played, and breached multiple times. It was truly an amazing experience to be able to see these wonderful creatures up close in their natural environment. We also got to observe the differences between transient orcas, that mostly feed on seals and migrate from place to place, versus resident orcas, who stay in one place their whole lives with their families, feeding mainly on fish. This particular family group that we observed actually lost one of its calves the week after we'd seen them, and the mother ended up carrying its body around for nearly two weeks in mourning, showing how deeply feeling these animals are and how intelligent.</p>
         </section>
         <div id="background"></div>
-        <img class="mountains" src="photos/mountains.jpg" alt="mountains">
-        <section class="nature-card">
-            <h2>Why Nature Photography?</h2>
-            <p>To me, nature photography just always made sense. I love hiking and fishing and just being outside in general, so it seemed like an obvious choice for me. I experimented with other types of photography for a while, I did family portraits, senior photos, even some more abstract things like documenting life in the city, the good and bad in the world. However, it really clicked in my brain that I wanted to photograph wildlife and nature after a trip to the zoo when I was 15. I got a picture of a lioness there when she stood directly in front of the glass, and you could see so much intelligence and beauty in her eyes, my little teenage self was stunned. Ever since then, I've decided that I'm going to get the perfect shot of a lion in the wild someday. I would love to be able to study and document predators in the wild in particular, and show the world that they are dangerous, yes, but most of the time, they're greatly misunderstood animals.</p>
-        </section>
-        <section class="msg">
-            <h2>Buy Prints:</h2>
-            <p>FINE ART PRINTS:
-                8X10 ~ $95
-                8X12 ~ $95
-                10X10 ~ $95
-                11X14 ~ $125
-                10X20 ~ $150
-                16X20 ~ $180
-                20X24 ~ $225
-                20X30 ~ $275
-                24X36 ~ $360
-            </p>
-            <div class='button-box'>
-                <a class='shop' href="contactme.html">Order Here</a>
-            </div>
-        </section>
+        <img class="orcas" src="photos/orca2.jpg" alt="orca">
     </main>
 
 
