--- a/photography/photoalbum.html
+++ b/photography/photoalbum.html
@@ -92,6 +92,7 @@
   max-width: 1000px;
   position: relative;
   margin: auto;
+  box-shadow: 5px 5px 10px black;
 }
 
 /* Hide the images by default */
